@@ -1,3 +1,5 @@
+Added "Reset Collection"
+Slightly smaller collection area text and boxes
 Fixed weird 3d structure bug
 # 0.00.24 (52167) May 18, 2011
 Re-added border/background around "Drag your molecule here"
